--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint src/ --fix --max-warnings=0",
     "format": "prettier 'src/**/*.{js,jsx,ts,tsx}' --write",
     "prepare": "husky install",
-    "generate:apis": "npx openapi-generator-cli generate -i https://ketering-be-dev.stryna.tech/open-api-json -g typescript-axios -o generated --output ./src/api/generated"
+    "generate:apis": "npx openapi-generator-cli generate -i https://ketering-be-dev.stryna.tech/open-api-json -g typescript-axios -o generated --output ./src/api/generated --skip-validate-spec"
   },
   "dependencies": {
     "@expo/config": "~8.5.0",
@@ -24,6 +24,7 @@
     "@os-team/i18next-react-native-language-detector": "^1.0.32",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/netinfo": "11.1.0",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@react-navigation/stack": "^6.3.18",
@@ -33,9 +34,11 @@
     "expo": "^50",
     "expo-build-properties": "~0.11.1",
     "expo-dev-client": "~3.3.8",
+    "expo-localization": "~14.8.3",
     "expo-status-bar": "~1.11.1",
     "expo-updates": "~0.24.11",
     "i18next": "^23.8.2",
+    "intl-pluralrules": "^2.0.1",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.2",
     "react": "18.2.0",
