--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-boilerplate",
+  "name": "pet-gard",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "lint-staged": {
