--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@expo/config": "~8.5.0",
     "@expo/vector-icons": "^14.0.0",
     "@os-team/i18next-react-native-language-detector": "^1.0.32",
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/netinfo": "11.1.0",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.1.8",
@@ -30,21 +30,21 @@
     "axios": "^1.6.7",
     "babel-plugin-module-resolver": "^5.0.0",
     "babel-runtime": "^6.26.0",
-    "expo": "^50",
+    "expo": "~50.0.13",
     "expo-build-properties": "~0.11.1",
     "expo-constants": "^15.4.5",
-    "expo-dev-client": "~3.3.8",
+    "expo-dev-client": "~3.3.10",
     "expo-linking": "^6.2.2",
     "expo-localization": "~14.8.3",
     "expo-status-bar": "~1.11.1",
-    "expo-updates": "~0.24.11",
+    "expo-updates": "~0.24.12",
     "i18next": "^23.8.2",
     "intl-pluralrules": "^2.0.1",
     "jest": "^29.2.1",
-    "jest-expo": "~50.0.2",
+    "jest-expo": "~50.0.4",
     "react": "18.2.0",
     "react-i18next": "^14.0.0",
-    "react-native": "0.73.4",
+    "react-native": "0.73.5",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-network-info": "^5.2.1",
     "react-native-reanimated": "~3.6.2",
