--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/netinfo": "11.1.0",
     "@react-native-picker/picker": "^2.6.1",
-    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/drawer": "^6.6.14",
+    "@react-navigation/native": "^6.1.16",
     "@react-navigation/native-stack": "^6.9.14",
     "@react-navigation/stack": "^6.3.18",
     "@supabase/supabase-js": "^2.39.8",
@@ -48,7 +49,7 @@
     "react-native-gesture-handler": "~2.14.0",
     "react-native-network-info": "^5.2.1",
     "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
+    "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.0.3",
     "zod": "^3.22.4",
