--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@react-native-community/netinfo": "11.1.0",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.19",
-
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/native-stack": "^6.9.14",
     "@react-navigation/stack": "^6.3.18",
@@ -36,7 +35,7 @@
     "expo-build-properties": "~0.11.1",
     "expo-constants": "^15.4.5",
     "expo-dev-client": "~3.3.10",
-    "expo-linking": "^6.2.2",
+    "expo-linking": "~6.2.2",
     "expo-localization": "~14.8.3",
     "expo-status-bar": "~1.11.1",
     "expo-updates": "~0.24.12",
