--- a/app.json
+++ b/app.json
@@ -19,20 +19,24 @@
         "foregroundImage": "./assets/android/drawable-xxxhdpi/logo.png.png",
         "backgroundColor": "#ffffff"
       },
-      "intentFilters": [
-        {
-          "action": "VIEW",
-          "autoVerify": true,
-          "data": [
-            {
-              "scheme": "https",
-              "host": "*.myapp.io",
-              "pathPrefix": "/records"
-            }
-          ],
-          "category": ["BROWSABLE", "DEFAULT"]
-        }
-      ]
+     "intentFilters": [
+  {
+    "action": "VIEW",
+    "autoVerify": true,
+    "data": [
+      {
+        "scheme": "https",
+        "host": "vgyoojanikcruxzcnilm.supabase.co",
+        "pathPrefix": "/auth/v1/verify"
+      },
+      {
+        "scheme": "com.pet.garrd",
+      }
+    ],
+    "category": ["BROWSABLE", "DEFAULT"]
+  }
+]
+
     ,
       "package": "com.pet.garrd",
       "permissions": ["ACCESS_COARSE_LOCATION", "ACCESS_FINE_LOCATION"]
