bug: routing do not wokr

--- a/eas.json
+++ b/eas.json
@@ -14,7 +14,8 @@
         "image": "latest",
         "env": {
           "PLATFORM": "android"
-        }
+        },
+          "buildType": "apk"
       },
       "channel": "base"
     },
